[package]
name = "log4rs-cases"
version = "0.1.0"
authors = ["haco <jmtaro+crates@gmail.com>"]
edition = "2018"
repository = "https://github.com/x7c1/log4rs-cases"
description = "Modules to use log4rs easily"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.13"
